deprecated ES6 arrow function 改掉箭頭函數

--- a/views/chat2.html
+++ b/views/chat2.html
@@ -76,7 +76,7 @@
     }
 
     // Sets the client's username
-    const setUsername = () => {
+    const setUsername = function() {
       username = cleanInput($usernameInput.val().trim());
 
       // If the username is valid
@@ -92,7 +92,7 @@
     }
 
     // Sends a chat message
-    const sendMessage = () => {
+    const sendMessage = function()  {
       var message = $inputMessage.val();
       // Prevent markup from being injected into the message
       message = cleanInput(message);
@@ -109,7 +109,7 @@
     }
 
     // Log a message
-    const log = (message, options) => {
+    const log = function(message, options) {
       var $el = $('<li>').addClass('log').text(message);
       addMessageElement($el, options);
     }
@@ -140,14 +140,14 @@
     }
 
     // Adds the visual chat typing message
-    const addChatTyping = (data) => {
+    const addChatTyping = function(data) {
       data.typing = true;
       data.message = 'is typing';
       addChatMessage(data);
     }
 
     // Removes the visual chat typing message
-    const removeChatTyping = (data) => {
+    const removeChatTyping = function (data) {
       getTypingMessages(data).fadeOut(function () {
         $(this).remove();
       });
@@ -158,7 +158,7 @@
     // options.fade - If the element should fade-in (default = true)
     // options.prepend - If the element should prepend
     //   all other messages (default = false)
-    const addMessageElement = (el, options) => {
+    const addMessageElement = function(el, options){
       var $el = $(el);
 
       // Setup default options
@@ -185,12 +185,12 @@
     }
 
     // Prevents input from having injected markup
-    const cleanInput = (input) => {
+    const cleanInput = function(input) {
       return $('<div/>').text(input).html();
     }
 
     // Updates the typing event
-    const updateTyping = () => {
+    const updateTyping = function() {
       if (connected) {
         if (!typing) {
           typing = true;
@@ -198,7 +198,7 @@
         }
         lastTypingTime = (new Date()).getTime();
 
-        setTimeout(() => {
+        setTimeout(function(){
           var typingTimer = (new Date()).getTime();
           var timeDiff = typingTimer - lastTypingTime;
           if (timeDiff >= TYPING_TIMER_LENGTH && typing) {
@@ -210,14 +210,14 @@
     }
 
     // Gets the 'X is typing' messages of a user
-    const getTypingMessages = (data) => {
+    const getTypingMessages = function(data){
       return $('.typing.message').filter(function (i) {
         return $(this).data('username') === data.username;
       });
     }
 
     // Gets the color of a username through our hash function
-    const getUsernameColor = (username) => {
+    const getUsernameColor = function(username){
       // Compute hash code
       var hash = 7;
       for (var i = 0; i < username.length; i++) {
@@ -229,7 +229,7 @@
     }
 
     // Keyboard events
-    $window.keydown(event => {
+    $window.keydown( (event) => {
       // Auto-focus the current input when a key is typed
       if (!(event.ctrlKey || event.metaKey || event.altKey)) {
         $currentInput.focus();
@@ -268,9 +268,7 @@
     //         }
     //       })
     //   })
-    // $inputMessage.on('input', () => {
-    //   updateTyping();
-    // });
+
     
     $(document).ready(function () {
           $('.del').bind("click touchstart", function(){
@@ -283,23 +281,20 @@
             }
           })
       })
-    $inputMessage.bind('input', () => {
+
+    $inputMessage.on('input', () => {
       updateTyping();
     });
-
-    // $inputMessage.on('input', () => {
-    //   updateTyping();
-    // });
 
     // Click events
 
     // Focus input when clicking anywhere on login page
-    $loginPage.click(() => {
+    $loginPage.click(function(){
       $currentInput.focus();
     });
 
     // Focus input when clicking on the message input's border
-    $inputMessage.click(() => {
+    $inputMessage.click(function(){
       $inputMessage.focus();
     });
 
@@ -308,7 +303,7 @@
     // socket.on('',); => define display current page
     // when the client emits 'add user', this listens and executes
     // Whenever the server emits 'login', log the login message
-    socket.on('login', (data) => {
+    socket.on('login', function(data){
       connected = true;
       // Display the welcome message
       var message = "Welcome to Socket.IO Chat – ";
@@ -319,45 +314,45 @@
     });
 
     // Whenever the server emits 'new message', update the chat body
-    socket.on('new message', (data) => {
+    socket.on('new message', function(data) {
       addChatMessage(data);
     });
 
     // Whenever the server emits 'user joined', log it in the chat body
-    socket.on('user joined', (data) => {
+    socket.on('user joined', function(data){
       log(data.username + ' joined');
       addParticipantsMessage(data);
     });
 
     // Whenever the server emits 'user left', log it in the chat body
-    socket.on('user left', (data) => {
+    socket.on('user left', function(data){
       log(data.username + ' left');
       addParticipantsMessage(data);
       removeChatTyping(data);
     });
 
     // Whenever the server emits 'typing', show the typing message
-    socket.on('typing', (data) => {
+    socket.on('typing', function(data){
       addChatTyping(data);
     });
 
     // Whenever the server emits 'stop typing', kill the typing message
-    socket.on('stop typing', (data) => {
+    socket.on('stop typing', function(data) {
       removeChatTyping(data);
     });
 
-    socket.on('disconnect', () => {
+    socket.on('disconnect', function(){
       log('you have been disconnected');
     });
 
-    socket.on('reconnect', () => {
+    socket.on('reconnect', function() {
       log('you have been reconnected');
       if (username) {
         socket.emit('add user', username);
       }
     });
 
-    socket.on('reconnect_error', () => {
+    socket.on('reconnect_error', function() {
       log('attempt to reconnect has failed');
     });
 
