deprecated ES6 arrow function 改掉箭頭函數

--- a/views/chat2.html
+++ b/views/chat2.html
@@ -229,7 +229,7 @@
     }
 
     // Keyboard events
-    $window.keydown( (event) => {
+    $window.keydown( function(event){
       // Auto-focus the current input when a key is typed
       if (!(event.ctrlKey || event.metaKey || event.altKey)) {
         $currentInput.focus();
