--- a/views/chat2.html
+++ b/views/chat2.html
@@ -70,7 +70,7 @@
       if (data.numUsers === 1) {
         message += "there's 1 participant";
       } else {
-        message += "there are " + data.numUsers + " participants";
+        message += "現在 " + data.numUsers + " 個人上線中";
       }
       log(message);
     }
@@ -306,7 +306,7 @@
     socket.on('login', function(data){
       connected = true;
       // Display the welcome message
-      var message = "Welcome to Socket.IO Chat – ";
+      var message = "歡迎進入聊天室";
       log(message, {
         prepend: true
       });
@@ -320,13 +320,13 @@
 
     // Whenever the server emits 'user joined', log it in the chat body
     socket.on('user joined', function(data){
-      log(data.username + ' joined');
+      log(data.username + ' 進入');
       addParticipantsMessage(data);
     });
 
     // Whenever the server emits 'user left', log it in the chat body
     socket.on('user left', function(data){
-      log(data.username + ' left');
+      log(data.username + ' 已離開');
       addParticipantsMessage(data);
       removeChatTyping(data);
     });
