--- a/views/chat2.html
+++ b/views/chat2.html
@@ -7,9 +7,9 @@
   <meta charset="UTF-8">
   <title>Socket.IO Chat Example</title>
   <!-- Latest compiled and minified CSS -->
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <!-- Latest compiled JavaScript -->
-  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
       <div class="chatArea">
         <ul class="messages"></ul>
       </div>
-      <input class="inputMessage" placeholder="Type here..." />
+      <input class="inputMessage" placeholder="輸入 ..." />
     </li>
     <li class="login page">
       <div class="form">
@@ -68,7 +68,7 @@
     const addParticipantsMessage = function (data) {
       var message = '';
       if (data.numUsers === 1) {
-        message += "there's 1 participant";
+        message += "目前只有你在聊天室";
       } else {
         message += "現在 " + data.numUsers + " 個人上線中";
       }
